# CMake

001__CMake_Playlist_Moatasem_Elsayed/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  defaultconfig.h  defaultconfig.h.in  install_manifest.txt
001__CMake_Playlist_Moatasem_Elsayed/include/: calc.hpp
001__CMake_Playlist_Moatasem_Elsayed/lib/: CMakeLists.txt  Makefile  cmake_install.cmake  wifi.cpp  wifi.hpp
001__CMake_Playlist_Moatasem_Elsayed/src/: calc.cpp  main.cpp
